--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "next": "10.0.3",
+    "postcss": "^8.1.10",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.4",
+    "sass": "^1.29.0",
+    "tailwindcss": "^2.0.1"
   }
 }
