--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "next": "10.0.3",
     "postcss": "^8.1.10",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-tippy": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
